		- Read additional header tags from the database and thus allow
		  to show e.g. flags if Black/WhiteCountry header is set even if
		  those tags are not provided by the games in the Inbox
		- Rewrite of some parts of the update procedure
		- Code cleanup and performance improvements
		- Allow scrolling of the CC gamelist by keyboard (PgUp/PgDn, Up/Down)
	* Update board in comment editor with current position while the comment editor is left open. (Joost t' Haart)
	* Show WhiteCountry/BlackCountry in game info area
	* Initial support for bibliographic links in PGN headers:
		- A BibTeX-file either named $scidDataDir/Bookshelf.bib or named and located along with the current database is parsed as bibliographic input
		- Header lines of the form [Bib "<bibtexkey>, <addinfo> ; <bibtexkey>, <addinfo>"]
		  open a new window with bibliographic reference; <addinfo> e.g. No.27 p.85.
		- if Bib-header exists a new link shows up in game info area
		- To handle the bibliographic database 3rd party tools can be
		  used. A valuabe free, open source  solution might be
		  http://jabref.sf.net (or any other bibliography tool for BibTeX)
	* Best games list:
		- For annotated games (NAGs, Comments, Variations) show an A in the list
		- For flagged games show up to 4 flag chars or the number of
		  flags if there are more than 4 flags present.
		- Obeys a filter set by header search
	* Allow to change the board without waiting for tree windows to complete search. (Thanks to Fulvio)
	* Rework ID linking code
		- Tags, resolverurls, icons etc. are read from a config file.
		  This eases up future extensions of IDs known by Scid
		- If no config exists create a default one handling FIDE, ICCF, DSB, BCF, VIAF, SM
		- Each ID has to link to a unique page, multiple links are not possible
		- PND is still special as it is used to link to various complex
		  locations like Wikipedia (including NLS) and SeeAlso. This is
		  still treated internally
	* Comment editor