@@ -467,6 +467,7 @@ int sc_filter_reset   (TCL_ARGS);
 int sc_filter_stats   (TCL_ARGS);
 int sc_filter_textfind (TCL_ARGS);
 int sc_filter_value   (TCL_ARGS);
+int sc_filter_clear   (TCL_ARGS);
 
 int sc_game           (TCL_ARGS);
 int sc_game_crosstable (TCL_ARGS);
