@@ -1294,7 +1294,6 @@ proc ::tree::primeWithBase {{ fillMask 0 }} {
 proc ::tree::primeWithGame { { fillMask 0 } } {
   set ::tree::totalMoves [countBaseMoves "singleGame" ]
   sc_move start
-  #----# updateBoard -pgn
   if {$fillMask} { ::tree::mask::feedMask [ sc_pos fen ] }
   
   set ::tree::parsedMoves 0
@@ -1327,10 +1326,8 @@ proc ::tree::parseGame {{ fillMask 0 }} {
       # enter each var (beware the first move is played)
       set fen [ sc_pos fen ]
       sc_var enter $v
-      #----# updateBoard -pgn
       if {$fillMask} { ::tree::mask::feedMask $fen }
       if {$::tree::cancelPrime } { return }
-      #----# ::tree::refresh
       if {$::tree::cancelPrime } { return }
       ::tree::parseVar $fillMask
       if {$::tree::cancelPrime } { return }
@@ -1338,11 +1335,9 @@ proc ::tree::parseGame {{ fillMask 0 }} {
     # now treat the main line
     set fen [ sc_pos fen ]
     sc_move forward
-    #----# updateBoard -pgn
     if {$fillMask} { ::tree::mask::feedMask $fen }
     incr ::tree::parsedMoves
     if {$::tree::cancelPrime } { return }
-    #----# ::tree::refresh
     if {$::tree::cancelPrime } { return }
   }
 }
@@ -1355,10 +1350,8 @@ proc ::tree::parseVar {{ fillMask 0 }} {
     for {set v 0} {$v<[sc_var count]} {incr v} {
       set fen [ sc_pos fen ]
       sc_var enter $v
-      #----# updateBoard -pgn
       if {$fillMask} { ::tree::mask::feedMask $fen }
       if {$::tree::cancelPrime } { return }
-      #----# ::tree::refresh
       if {$::tree::cancelPrime } { return }
       # we are at the start of a var, before the first move : start recursive calls
       parseVar $fillMask
@@ -1367,12 +1360,10 @@ proc ::tree::parseVar {{ fillMask 0 }} {
     
     set fen [ sc_pos fen ]
     sc_move forward
-    #----# updateBoard -pgn
     if {$fillMask} { ::tree::mask::feedMask $fen }
     incr ::tree::parsedMoves
     updateProgressWindow $::tree::parsedMoves $::tree::totalMoves
     if {$::tree::cancelPrime } { return }
-    #----# ::tree::refresh
     if {$::tree::cancelPrime } { return }
   }
   
